Fix flickering etc.

--- a/styles/BasePage.less
+++ b/styles/BasePage.less
@@ -18,6 +18,8 @@
 
 body {
   .full-box();
+
+  overflow-x: hidden;
 }
 
 #__next {
@@ -51,4 +53,9 @@ code {
   margin: 0 0.15em;
   padding: 0.1em 0.15em 0;
   vertical-align: middle;
+}
+
+.BasePage-Footer {
+  display: flex;
+  justify-content: center;
 }
