--- a/styles/BigHeader.less
+++ b/styles/BigHeader.less
@@ -1,6 +1,6 @@
 @import 'lib';
 
-.BigHeaderHero {
+body .BigHeaderHero {
   .night();
   height: 100vh;
 
